<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_khata"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_khata" />
        <item
            android:id="@+id/nav_turnover"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_turnover" />
        <item
            android:id="@+id/nav_helpers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_helpers" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Transactions" />

    </group>
</menu>